--- a/content/w16_exam3.html
+++ b/content/w16_exam3.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='W16_exam2.html'>W16_exam2</a><ul class='dropdown'><li><a href='w16_exam3.html'>w16_exam3</a><li><a href='w16_exam1.html'>w16_exam1</a><li><a href='w15.html'>w15</a><li><a href='w14_ex.html'>w14_ex</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW1_exam.html'>HW1_exam</a><ul class='dropdown'><li><a href='W16_exam2.html'>W16_exam2</a><li><a href='w16_exam3.html'>w16_exam3</a><li><a href='w16_exam1.html'>w16_exam1</a><li><a href='w15.html'>w15</a><li><a href='w14_ex.html'>w14_ex</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W16_exam2 << <a href='W16_exam2.html'>Previous</a> <a href='w16_exam1.html'>Next</a> >> w16_exam1<br /><h1>w16_exam3</h1>
+<p><a href="https://mdecp2024.github.io/hw-41323228/content/Brython.html?src=https://gist.githubusercontent.com/41323228/73ea0a888d082cd8a62848edf3cff575/raw/3c39d825d820fd541bebd3f5ec753256bb76f99c/w16">w16_exam3</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from browser import html
 from browser import document as doc
 import math
@@ -296,8 +297,7 @@ if __name__ == "__main__":
     ctx, offset_x, offset_y, pixel_scale = draw_maze(maze_angle)
     path = find_path()
     draw_path(ctx, offset_x, offset_y, maze_angle, path, pixel_scale)
-    label_coordinate(ctx, offset_x, offset_y, text_angle)
-</pre>
+    label_coordinate(ctx, offset_x, offset_y, text_angle)</pre>
 <p><img alt="" height="689" src="./../images/螢幕擷取畫面 2025-01-07 021658.png" width="663"/></p><br />W16_exam2 << <a href='W16_exam2.html'>Previous</a> <a href='w16_exam1.html'>Next</a> >> w16_exam1</div>
         
     <!-- footer -->
