--- a/content/w16_exam1.html
+++ b/content/w16_exam1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='W16_exam2.html'>W16_exam2</a><ul class='dropdown'><li><a href='w16_exam3.html'>w16_exam3</a><li><a href='w16_exam1.html'>w16_exam1</a><li><a href='w15.html'>w15</a><li><a href='w14_ex.html'>w14_ex</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW1_exam.html'>HW1_exam</a><ul class='dropdown'><li><a href='W16_exam2.html'>W16_exam2</a><li><a href='w16_exam3.html'>w16_exam3</a><li><a href='w16_exam1.html'>w16_exam1</a><li><a href='w15.html'>w15</a><li><a href='w14_ex.html'>w14_ex</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li><a href='HW 3 Exam.html'>HW 3 Exam</a></li></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w16_exam3 << <a href='w16_exam3.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w16_exam1</h1>
+<p><a href="https://mdecp2024.github.io/hw-41323228/content/Brython.html?src=https://gist.githubusercontent.com/41323228/7d1a93bd210d918a79a2393d401f2807/raw/88755376b48c62071aab7abd51b63679d07119bf/w16">w16_exam1</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from browser import document, html
 import math
   
